Исправлена ошибка при переименовании файла .epub. Добавлена функция поиска самого первого расширения в файле.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-﻿# exclude everything except current directory
+# exclude everything except current directory
 __pycache__
 .git/
-.bump*.*
 *.cmd
 *.epub
 *.zip
